package zeldiablo.entite;

/**
 * Represente un monstre dans le jeu.
 */
public class Monstre extends Personnage {
    // ########## Constructeurs ##########
    /**
     * Cree un nouveau monstre.
     *
     * @param x la coordonnee x
     * @param y la coordonnee y
     * @param vie les points de vie
     */
    public Monstre(int x, int y, int vie) {
        super(x, y, vie);
    }
}
